# invoice-manager

./: .env.example  .gitignore  README.md  app.py  config.py  deduplication.py  drive_service.py  email_processor.py  file_processor.py  gemini_service.py  generate_secrets.py  gmail_scanner.py  gmail_service.py  logger_setup.py  main.py  packages.txt  pyproject.toml  requirements.txt  setup_auth.py
.streamlit/: config.toml
